fix spacing and index page

--- a/components/home/introduction.module.css
+++ b/components/home/introduction.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   font-family: "Marmelad";
   font-style: normal;
-  background-color: salmon;
+  /* background-color: salmon; */
 }
 
 .header {
