--- a/components/home/latest-projects.module.css
+++ b/components/home/latest-projects.module.css
@@ -138,7 +138,7 @@
   }
 
   .container {
-    margin: 10%;
+    margin: 15px 10%;
   }
 
   .carousel .item {
